style: reduce space of markings gutter fix: improved range text unwrapping fix: improper parsing of substitution ranges with metadata

--- a/src/assets/criticicmarkup-gutter.scss
+++ b/src/assets/criticicmarkup-gutter.scss
@@ -1,6 +1,6 @@
 .cm-gutters.cm-gutters:has(>.criticmarkup-gutter) {
 	// How far away the gutter should be removed from the text
-	padding-inline-end: 1em;
+	//padding-inline-end: 1em;
 }
 
 .cm-gutters:has(>.criticmarkup-gutter-show-empty) {
